# SitalaConverter

./: CMakeLists.txt  Config.h.in  README.md  SamplesFromMarsConverter.jucer  convert_all_kits.rb
JuceLibraryCode/: JuceHeader.h
Source/: ADGReader.cpp  ADGReader.h  AbletonDeviceGroupReader.cpp  AbletonDeviceGroupReader.h  Converter.cpp  Converter.h  LayoutManagedComponent.cpp  LayoutManagedComponent.h  LayoutManager.cpp  LayoutManager.h  Main.cpp  MainComponent.cpp  MainComponent.h  SitalaKitGenerator.cpp  SitalaKitGenerator.h  main.cpp
TextFiles/727 From Mars/Ableton Live/727 From Mars/Presets/: 727 From Mars Kits 1-5.txt  727 From Mars Kits 6-10.txt
TextFiles/MPC60 From Mars/Ableton Live/MPC60 From Mars/Presets/: MPC60 From Mars Kits 1.txt  MPC60 From Mars Kits 2.txt  MPC60 From Mars Kits 3.txt
TextFiles/Rhythm From Mars/Ableton Live/Rhythm From Mars/Presets/Kits/: Rhythm 700 Kit 2.txt
TextFiles/SDSV From Mars/Ableton Live/SDSV From Mars/Presets/Kits/: Assorted Kit 1.txt  Assorted Kit 2.txt  Assorted Kit 3.txt  Tuned Kit.txt
